# tabdeeli

./: .gitignore  CMakeLists.txt  README.md
external_libs/libag/: CMakeLists.txt  Makefile  libag.c  libag.h
external_libs/libag/ag_src/: util.c  util.h
external_libs/libag/doc/man3/: ag_search.3
src/: colors.hpp  components.cpp  components.hpp  flexible_container.cpp  flexible_input.cpp  flexible_menu.cpp  flexible_paragraph.cpp  main.cpp  metaprogramming.cpp  metaprogramming.hpp  object_utils.cpp  object_utils.hpp  searcher.cpp  searcher.hpp  serde.cpp  serde.hpp  sl_types.hpp  state.hpp  styled_button.cpp  utils.cpp  utils.hpp
tests/: test_file.cpp  test_file2.cpp  test_file_replace.cpp  unit_tests.cpp
